2010-05-22  Chong Yidong  <cyd@stupidchicken.com>

	* image.c (Fimage_flush): Rename from image-refresh.

2010-05-21  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (redisplay_internal): Clear caches even if redisplaying
	just one window.

	* image.c (Vimage_cache_eviction_delay): Decrease to 300.
	(clear_image_cache): If the number of cached images is unusually
	large, decrease the cache eviction delay (Bug#6230).

2010-05-21  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (${ns_appdir}, ${ns_appbindir}Emacs, ns-app):
	Move these rules to ns.mk.
	* ns.mk: New file.

	* Makefile.in (../src/$(OLDXMENU), $(OLDXMENU)): Always define rules.

	* Makefile.in (CANNOT_DUMP): New, set by configure.
	(emacs${EXEEXT}, bootstrap-emacs${EXEEXT}): Use $CANNOT_DUMP.

2010-05-20  Juri Linkov  <juri@jurta.org>

	* fileio.c (Fdelete_file): Change interative spec to use
	`read-file-name' like in `find-file-read-args' where the default
	value is `default-directory' instead of `buffer-file-name'.
	http://lists.gnu.org/archive/html/emacs-devel/2010-05/msg00533.html

2010-05-20  Kevin Ryde  <user42@zip.com.au>

	* keyboard.c (Vlast_command, Vkeyboard_translate_table)
	(Voverriding_terminal_local_map, Vsystem_key_alist)
	(Vlocal_function_key_map): Fix manual link in docstring (Bug#6224).

2010-05-20  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (DEPDIR): New constant.
	(DEPFLAGS): Set with configure, not cpp.
	(MKDEPDIR): New, set by configure.
	(.c.o, .m.o, ecrt0.o): Use $MKDEPDIR.
	(clean): Use $DEPDIR.
	(deps_frag): Include from configure.
	Move static/dynamic dependency stuff to deps.mk/autodeps.mk.
	* deps.mk, autodeps.mk: New files, extracted from Makefile.in.

2010-05-19  Eli Zaretskii  <eliz@gnu.org>

	* bidi.c (bidi_cache_shrink, bidi_cache_iterator_state): Fix
	reallocation of the cache.  (Bug#6210)

2010-05-19  Glenn Morris  <rgm@gnu.org>

	* s/msdos.h (ORDINARY_LINK): Move to sed2v2.inp.

	* Makefile.in (LD, YMF_PASS_LDFLAGS): Set with configure, not cpp.
	(GNULIB_VAR): Remove.